# mysingleneuron

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  matrix.c
headers/: lexer.h  numericalMethods.h  parser.h  stringstream.h  token.h
include/: matrix.h
src/: functions.c  functions.h  globals.h  lexer.c  lexer.h  main.c  matrix.c  matrix.h  model.h  numericalMethods.c  numericalMethods.h  parser.c  stringstream.c  token.c  tree.h
tests/: matrix_singleton_test.c  matrix_test.c  matrix_test.h  run_tests.sh  test_matrix.c  test_matrix.h  test_singleton_matrix.c  tokenize_test.c  utils.h
